Minor updates and some viz repairs.

--- a/songs/Baroko.tex
+++ b/songs/Baroko.tex
@@ -8,7 +8,7 @@ z k\[Bb]amene oživlá světi\[C]ce \brk
 poz\[Dmi]vedá monstranci měsí\[C]ce \brk
 \endverse
 \beginchorus
-T\[F]aková z\[C]ář je jen \[Dmi]jedna \brk
+T\[F]aková z\[C]ář je jen \[Dmi]jedna \[Bb]\brk
 odtu\[F]d až do \[C]nedohled\[Dmi]na    \[Bb]         \brk
 no a\[F] z něj dale\[C]ko šir\[Dmi]oko     \[Bb]         \brk
 prou\[F]dem se rozl\[C]évá baro\[Dmi]ko     \[Bb]         \brk
@@ -20,7 +20,7 @@ Kte\[Bb]ré jsem čekal a ne\[C]propás \brk
 Dův\[Dmi]erně známý je kaž\[C]dý z vás \brk
 \endverse
 \beginchorus
-J\[F]ste-li \[C]tak důvěrný \[Dmi]známý \brk
+J\[F]ste-li \[C]tak důvěrný \[Dmi]známý \[Bb]\brk
 Pojď\[F]te a zp\[C]ívejte s nám\[Dmi]i     \[Bb]         \brk
 My d\[F]ole vy \[C]zase vysoko\[Dmi]      \[Bb]         \brk
 O to\[F]m jak m\[C]ocné je baro\[Dmi]ko     \[Bb]         \brk
@@ -32,7 +32,7 @@ Kte\[Bb]rá nám sežrala sto\[C]letí \brk
 Zpě\[Dmi]nění hřebci se roz\[C]letí \brk
 \endverse
 \beginchorus
-V\[F] tuto n\[C]oc lámání \[Dmi]kostí \brk
+V\[F] tuto n\[C]oc lámání \[Dmi]kostí \[Bb]\brk
 Chyt\[F]rácké m\[C]alověrnost\[Dmi]i     \[Bb]         \brk
 Sraž\[F]me tu b\[C]estii hlubo\[Dmi]ko    \[Bb]         \brk
 Tak \[F]jak to \[C]umí jen bar\[Dmi]oko   \[Bb]         \brk
