--- a/songs/Boulevard_Of_Broken_Dreams.tex
+++ b/songs/Boulevard_Of_Broken_Dreams.tex
@@ -1,8 +1,6 @@
 \sclearpage\beginsong{Boulevard Of Broken Dreams}[by={Green Day}]
 \capo{3}
 \transpose{5}
-\beginverse*{\nolyrics Intro: \[Em]   \[G]  \[D]  \[A]\brk
-}\endverse
 \beginverse
 \[Em]I walk a l\[G]onely road, the o\[D]nly one that I\[A] have ever know\[Em]n\brk
 Don't know \[G]where it goes, \[D]but it's home to \[A]me and I walk al\[Em]one\brk
@@ -10,9 +8,9 @@ Don't know \[G]where it goes, \[D]but it's home to \[A]me and I walk al\[Em]one\
 \endverse
 \beginverse
 \[Em]I walk this e\[G]mpty street, o\[D]n the bouleva\[A]rd of broken dr\[Em]eams\brk
-Where the \[G]city sleeps, and \[D]I'm the only o\[A]ne and I walk al\[Em]one\brk
-I\[Em] wal\[G]k a\[D]lone, I walk\[A] alone        \[Em]\brk
-I\[Em] wal\[G]k a\[D]lone, I walk\[A] a....\brk
+Where the \[G]city sleeps, and \[D]I'm the only o\[A]ne and I walk al\[Em]one\[G]\brk
+I\[D] walk a\[A]lone, I walk\[Emi] alone \[G]\brk
+I\[D] walk a\[A]lone, I walk a....\brk
 \endverse
 \beginchorus
 \[C]My shado\[G]w's the only \[D]one that walks \[Em]beside me\brk
@@ -33,9 +31,9 @@ And \[A]where I walk al\[Em]one\brk
 \[Em]Read bet\[G]ween the lines\brk
 \[D]What's fucked up and \[A]everything's al\[Em]right\brk
 Check my \[G]vital signs, to \[D]know I'm still a\[A]live\brk
-And I walk al\[Em]one\brk
-I\[Em] wal\[G]k a\[D]lone, I walk\[A] alone        \[Em]\brk
-I\[Em] wal\[G]k a\[D]lone, I walk\[A] a....\brk
+And I walk al\[Em]one\[G]\brk
+I\[D] walk a\[A]lone, I walk\[Emi] alone \[G]\brk
+I\[D] walk a\[A]lone, I walk a....\brk
 \endverse
 \beginchorus
 \[C]My shado\[G]w's the only \[D]one that walks \[Em]beside me\brk
