--- a/songs/Co_Z_Tebe_Bude.tex
+++ b/songs/Co_Z_Tebe_Bude.tex
@@ -1,7 +1,5 @@
 \sclearpage\beginsong{Co Z Tebe Bude}[by={Pokáč}]
 \capo{3}
-\beginverse*{\nolyrics Intro: \[Am]  \[Dm]   \[G]  \[C]         \brk
-}\endverse
 \beginverse
 \[C]Když jsem byl prcek,\[Dm] tak se mě všude\brk
 \[G]Dospěláci ptali chlapče,\[C] co z tebe bude\brk
@@ -54,5 +52,5 @@ Já chci \[G]lítat na měsíc \[C]a pak zpět\brk
 Já chci \[Am]drink a pláž ne tvou \[Dm]kancelář\brk
 Tak \[G]proč se mě tak blbě\brk
 \[G]No, vážně hodně blbě\brk
-Tak \[G]proč se mě tak blbě \[C]  A D G B        a text - Chords and  feat.   - Co Z Tebe Bude  - Co Z Tebe Bude  - Co Z Tebe Bude  YEAR  YEAR \brk
+Tak \[G]proč se mě tak blbě ptáš.
 \endchorus\endsong
