--- a/songs/Dej_Mi_Víc_Své_Lásky.tex
+++ b/songs/Dej_Mi_Víc_Své_Lásky.tex
@@ -30,5 +30,5 @@ mi\[Em] dokonale zvednul nála\[D]du, a\[B7]úú,\brk
 \[G]Má drahá dej mi víc, \[B7]má drahá dej mi víc,\brk
 \[Em]má drahá \[C]dej mi víc své \[G]lásky, \[D]aúú\brk
 \[G]Ja nechci skoro nic, \[B7]já nechci skoro nic,\brk
-\[Em]já chci jen \[C]pohladit tvé \[G]vlásky,  \[B7]Mé  M.    Monsters and    Her       Monsters and  Her  I  Tvý  Na    Do    Mé       - Dej Mi Víc Své Lásky  - Dej Mi Víc Své Lásky  - Dej Mi Víc Své Lásky\brk
+\[Em]já chci jen \[C]pohladit tvé \[G]vlásky.\[B7]
 \endchorus\endsong
