--- a/songs/Drobná_Paralela.tex
+++ b/songs/Drobná_Paralela.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Drobná Paralela}[by={Chinaski}]
-\beginverse*{\nolyrics Intro: 
-\[C] \[G] \[D]         \brk
+\beginverse*{\nolyrics Intro: \[C] \[G] \[D]         \brk
 }\endverse
 \beginverse
 \[C]Ta stará \[G]dobrá hra je o\[D]koukaná. \brk
