--- a/songs/Get_Lucky.tex
+++ b/songs/Get_Lucky.tex
@@ -55,6 +55,4 @@ And our \[Em]cups to the \[D]stars\brk
 \[Em]We're up all night to get lucky\brk
 \[D]We're up all night to get lucky\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-(r\[Am]epeat\[C] and\[Em]   so\[D]ng  A D G B             Correction:\brk
-}\endverse\endsong
+\endsong
