--- a/songs/Good_Riddance_Time_Of_Your_Life.tex
+++ b/songs/Good_Riddance_Time_Of_Your_Life.tex
@@ -31,7 +31,4 @@
 \beginchorus
 \[Em]It's something unpredic\[G]table but in\[Em] the end it's\[G] right\brk
 \[Em]I hope you had the \[D]time of your \[G]life.\brk
-\endchorus
-\beginverse*{\nolyrics [Outro]: 
-
-}\endverse\endsong
+\endchorus\endsong
