--- a/songs/Holky_To_Objektivně_Lehčí_Maj.tex
+++ b/songs/Holky_To_Objektivně_Lehčí_Maj.tex
@@ -60,5 +60,5 @@ Všechny ty \[C]večeře zaplace\[G]ný,\brk
 roky \[D]mateřský dovole\[Em]ný.\brk
 Tak to je \[C]jen pár důvo\[G]dů,\brk
 proč si myslím, že maj \[D]hroznou výhodu.\brk
-a žijou  A D G\[G] B    Z Tebe  a text - Chords and  Když Jsme  kdyz jsme plesaty:  feat.    pozitivni by Pokac:  Mi  dej mi pusu by Pokac:  - Holky To Objektivně Lehčí Maj  - Holky To Objektivně Lehčí Maj  - Holky To Objektivně Lehčí Maj  YEAR  YEAR \brk
+a žijou  dýl.
 \endchorus\endsong
