--- a/songs/Hollywood_Hills.tex
+++ b/songs/Hollywood_Hills.tex
@@ -1,45 +1,55 @@
 \sclearpage\beginsong{Hollywood Hills}[by={Sunrise Avenue}]
-\beginverse*{\nolyrics Intro: 
-\[C] \[G] \[Am]  \[G] \[C]         \brk
+\beginverse*{\nolyrics Intro: \[C] \[G] \[Am]  \[G] \[C]         \brk
 }\endverse
 \beginverse
 No, this \[C]is not the time or the place for broken heart\[G]ed\brk
 Cause this is the end of the \[Am]rainbow\brk
+Where no one can be too sad
 No, I \[C]don't wanna leave but I must keep moving ah\[G]ead\brk
 Cause my life belongs to the othe\[Am]r side\brk
+Behind the great ocean’s waves
 \endverse
 \beginchorus
 \[C]Bye, bye Hollywood Hills I'm gonna  \[G]         \brk
 miss you wherever I go I'm gonna   \[Am]         \brk
 come back to \[Em]walk these streets again    \[F]         \brk
+Bye, bye Hollywood Hills forever
 \[C] \[G] \[Am]  \[G]         \brk
 \endchorus
 \beginverse
 Thank \[C]you for the morning walks on the sweet sun\[G]set\brk
 And for the hot night m\[Am]oments\brk
+For the fantasy in my bed
 I take a \[C]part of you with me now and you won't get it \[G]back\brk
 And a part of me will \[Am]stay here, \brk
+you can keep it forever, dear
 Woouuo\[D]ohell\[F]ip;\brk
 \endverse
 \beginchorus
-\[C]Bye, bye Hollywood Hills I'm gonna \brk
+\[C]Bye, bye Hollywood Hills I'm gonna\[G]  \brk
 miss you wherever I go I'm gonna  \[Am]         \brk
 come back to w\[Em]alk this streets again    \[F]         \brk
+Remember that we had fun together
 \[C]Bye, bye Rodeo girls I'm gonna     \[G]         \brk
 Love you wherever I go I'm gonna  \[Am]         \brk
 Come back so we can play together     \[F]         \brk
+Bye, bye Hollywood Hills forever
 \endchorus
 \beginverse*{\nolyrics [Bridge]: 
 \[C]Long distance love doesn't \[G]work \brk
 All the miles in between getting l\[Am]onely\brk
+No, I don’t wanna go
+I don’t wanna go
 }\endverse
 \beginchorus
 \[C]Bye, bye Hollywood Hills I'm gonna  \[G]         \brk
 miss you wherever I go I'm gonna   \[Am]         \brk
 come back to w\[Em]alk these streets again    \[F]         \brk
+Bye, bye Hollywood Hills forever
 \[C]Bye, bye Hollywood Hills I'm gonna \brk
 miss you wherever I go I'm gonna  \[Am]         \brk
 come back to \[Em]walk this streets again    \[F]         \brk
+Remember that we had fun together
 \[C]Bye, bye Rodeo girls I'm gonna     \[G]         \brk
 Love you wherever I go I'm gonna  \[Am]         \brk
 Come back so \[Em]we can play together       \[F]         \brk
