--- a/songs/Jasná_Zpráva.tex
+++ b/songs/Jasná_Zpráva.tex
@@ -38,5 +38,4 @@ ve dvou \[D]vzhůru.\brk
 \[Em]není komu z \[C]okna mávat v\[D]íc,\brk
 \[Am]jasná zpráva, \[C]rub, co nemá \[G]líc\brk
 \endverse
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
