--- a/songs/Mimorealita.tex
+++ b/songs/Mimorealita.tex
@@ -48,5 +48,4 @@ a zítra \[Em]zase na šes\[C]tou\brk
 a i když \[G]prší, musíš \[D]vstát\brk
 já mám tě, jsi \[Em]můj kus nebe \[C]:/\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
