--- a/songs/Minulost.tex
+++ b/songs/Minulost.tex
@@ -16,8 +16,7 @@
 \[Em]ta holka nese to v batohu na zádech,\[G] ale nevrá\[A]tí\brk
 \endverse
 \beginchorus
-\[D]Tak mě tu máš, \[A]tak si mě zvaž\brk
-\[Bm]pozvi mě dál, \[A]jestli mě znáš, jsem tvoje \[D]minulost\brk
+\textbf{R:}
 \endchorus
 \beginverse
 \[D]Stromy jsou vyšší a tráva je nižší a \[A]na louce roste pýr\brk
@@ -26,8 +25,7 @@
 \[Em]průvodčí, kteří tě vozili před léty\[G] dávno neži\[A]jí\brk
 \endverse
 \beginchorus
-\[D]Tak mě tu máš, \[A]tak si mě zvaž\brk
-\[Bm]pozvi mě dál, \[A]jestli mě znáš, jsem tvoje \[D]minulost\brk
+\textbf{R:}
 \endchorus
 \beginverse
 \[D]Na větvích jabloní nerostou fíky a z \[A]kopřiv nevzroste les\brk
@@ -36,8 +34,7 @@
 \[Em]ty sedíš u stolu a ona nese ti\[G] jídlo k obě\[A]du\brk
 \endverse
 \beginchorus
-\[D]Tak mě tu máš, \[A]tak si mě zvaž\brk
-\[Bm]pozvi mě dál, \[A]jestli mě znáš, jsem tvoje \[D]minulost\brk
+\textbf{R:}
 \endchorus
 \beginverse
 \[D]Rozestel postel a ke zdi si lehni, \[A]ona se přitulí\brk
@@ -47,5 +44,5 @@
 \endverse
 \beginchorus
 \[D]Tak mě tu máš, \[A]tak si mě zvaž\brk
-\[Bm]pozvals mě dál, \[A]teď už mě znáš, jsem tvoje \[D] A D G B \brk
+\[Bm]pozvals mě dál, \[A]teď už mě znáš, jsem tvoje minulost.\[D]
 \endchorus\endsong
