--- a/songs/Nagasaki_Hirošima.tex
+++ b/songs/Nagasaki_Hirošima.tex
@@ -23,7 +23,7 @@ z \[C]tak velky l\[G]asky ve\[F]tsinou nez\[G]byde nic,\[Am]\brk
 Z \[F]takovy l\[C]asky js\[F]ou kruhy pod\[C] ocima \[G] \brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
-a dve \[C]spaleny s\[G]rdce - Na\[F]gasaki, Hir\[G]osima. \[C]     \[G] \[F] \[G]\brk
+a dve \[C]spaleny s\[G]rdce - Na\[F]gasaki, Hir\[G]osima.~\[C]\,\[G]\,\[F]\,\[G]\brk
 a dve \[C] spaleny \[G] srdce - \[F] Nagasaki, \[G] Hirosi\[C] ma.  \[G]  \[F]  \[G] \brk
-a dve \[C] spaleny \[G] srdce - \[G] Nagasaki, \[G] Hirosi\[C]  A D \[G]G \[F]B \[G]  \brk
+a dve \[C] spaleny \[G] srdce - \[G] Nagasaki, \[G] Hirosi\[C]  \[G] \[F] \[G]  \brk
 }\endverse\endsong
