--- a/songs/Osmý_Den.tex
+++ b/songs/Osmý_Den.tex
@@ -33,5 +33,4 @@ osmý den \[G]scházel nám \[C] \[G]   \[C]         \brk
 \[D]osmý den je \[C]nutný já to \[Ami]vím\brk
 \[C]sedm nocí \[Ami]spíš jen \[G]spíš vždyť víš\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
