--- a/songs/Pohoda.tex
+++ b/songs/Pohoda.tex
@@ -29,5 +29,5 @@ když něco \[D] nejde, co na tom \[A] sejde my máme \[Bm] čas.\brk
 \[D]Když se u nás chlapi  \[A]poperou, tak jenom  \[E]nožem anebo  \[Bm]sekerou.\brk
 V zimě tam \[D] dlouhý noci \[A] jsou a tuhej \[Bm] mráz (a tam já to mám rád).\brk
 \[D]Jak jsou naše cesty  \[A]zavátý, tak vezmem  \[E]vidle a nebo  \[Bm]lopaty,\brk
-když něco \[D] nejde, co na tom \[A] sejde my máme \[Bm]  A D G B   \brk
+když něco \[D] nejde, co na tom \[A] sejde my máme čas.\[Bm] \brk
 \endverse\endsong
