--- a/songs/Pompeii.tex
+++ b/songs/Pompeii.tex
@@ -43,12 +43,14 @@ How a\[C]m I gonna be an o\[G]ptimist ab\[D]out this?\brk
 How a\[C]m I gonna be an o\[G]ptimist ab\[D]out this?\brk
 \[C]   \[G]   \[Em]    \[D]         \brk
 \endchorus
-\beginverse*{\nolyrics [Bridge]: 
+\vspace{-0.4cm}
+\beginverse*{
 \[C]Oh where do we beg\[G]in?\brk
 The r\[Em]ubble or our s\[D]ins?\brk
 \[C]Oh where do we beg\[G]in?\brk
 The r\[Em]ubble or our s\[D]ins?\brk
 }\endverse
+\vspace{-0.4cm}
 \beginchorus
 And the w\[C]alls kept tumbling d\[G]own\brk
 In the city that we\[Em] l-o-v-e-\[D]d\brk
