--- a/songs/Runaway_Train.tex
+++ b/songs/Runaway_Train.tex
@@ -61,6 +61,4 @@ And \[F]everything seems \[G]cut and dry\brk
 \[Am]Runaway train burning in my veins\brk
 \[G]I'd runaway but it always seems the same\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-(r\[C]epeat \[C]and fa\[Em]de  A \[Em]D G B \[Am]      \[Am]      \[G]  van \[G]  it all for the kids,  think that there is a F before the G on the verses. For example. \brk
-}\endverse\endsong
+\endsong
