--- a/songs/Tři_Kříže.tex
+++ b/songs/Tři_Kříže.tex
@@ -46,5 +46,5 @@ Katty \[Dm]Rodgers těm \[C]dvoum život \[Dm]vzal.\brk
 Jen tři \[F]kříže z bí\[C]lýho kame\[Am]ní\brk
 jsem jim \[Dm]do písku \[C]posklá\[Dm]dal.\brk
 Slzy \[F]v očích měl a \[C]v ruce znave\[Am]ný,\brk
-lodní \[Dm]deník   a \[C]v něm,   co jsem \[Dm]  A \[Dm]D G \[Dm]B   \[D]   on the version from  Trop - Tři Kříže  Trop - Tři Kříže  Trop - Tři Kříže\brk
+lodní deník a v něm co jsem psal.
 \endchorus\endsong
