--- a/songs/Ulica.tex
+++ b/songs/Ulica.tex
@@ -31,5 +31,5 @@ Správna \[C]póza kráľov \[Am]korza a prázdno vo \[F]vrecká\[G]ch\brk
 Prvé \[D]hriechy, vocir\[Bm]c;ňa viechy, s ja\[G]rno\[A]u tmou\brk
 Prvé \[D]rande, úspech v\[Bm] bande a básne pod \[G]lampo\[A]u\brk
 Prvé \[D]lásky, hudba z\[Bm] pásky, bozky v \[G]tmá\[A]ch\brk
-Správ\[D]na póza kráľov\[Bm] korza a prázdno vo \[G] A D G\[A] B   \brk
+Správ\[D]na póza kráľov\[Bm] korza a prázdno vo vreckách. \[G]\[A]   \brk
 \endchorus\endsong
