--- a/songs/V_Lese.tex
+++ b/songs/V_Lese.tex
@@ -63,5 +63,5 @@ Když tam nejsou žádný \[G]zásuvky a žádný Bubble \[Am]tea...\brk
 Dneska \[F]jsem v lese \[C]byl, bylo \[G]to naposl\[Am]ed.\brk
 Abych \[F]maily vyří\[C]díl, musel jsem \[G]vylízt na \[Am]posed...\brk
 Dneska \[F]jsem v lese \[C]byl a už \[G]tam nepůj\[Am]du.\brk
-Nikde \[F]jsem nezaž\[C]il \[G]tak ukrutno\[Am]u    A D G B     Z Tebe  a text - Chords and  - V Lese  - V Lese  - V Lese  YEAR  YEAR \brk
+Nikde \[F]jsem nezaž\[C]il \[G]tak ukrutno\[Am]u nudu.
 \endchorus\endsong
