--- a/Songbook.tex
+++ b/Songbook.tex
@@ -7,7 +7,7 @@
 % \usepackage[xetex]{hyperref}        % Interactive PDF
 % \usepackage[dvipdfm]{hyperref}
 % \usepackage[landscape,top=10.0mm, bottom=15.0mm, left=10.0mm, right=10.0mm]{geometry}
-\usepackage[top=10.0mm, bottom=15.0mm, left=15.0mm, right=10.0mm]{geometry}
+\usepackage[top=10.0mm, bottom=15.0mm, left=8.0mm, right=10.0mm]{geometry}
 %\usepackage{savetrees}      % Enable to save paper!
 
 %% Songbook packages
@@ -38,7 +38,7 @@
 \renewcommand{\everychorus}{\vspace{0.2cm}} % -- na zacatku refrenu
 % \renewcommand{\everychorus}{{\textnote{\textbf{R:}}}} % -- na zacatku refrenu
 % \renewcommand{\printversenum}[1]{\textbf{}}     % -- na zacatku sloky
-\renewcommand{\printversenum}[1]{\textbf{\hspace{-0.6cm}#1:\,}}     % -- na zacatku sloky
+\renewcommand{\printversenum}[1]{\textbf{\hspace{-0.0cm}#1:\,}}     % -- na zacatku sloky
 % \renewcommand{\chorusfont}{\it}               % -- font refrenu, podobne sloka atd
 
 % -- font akordu 
@@ -46,7 +46,7 @@
 
 % -- mezery
 % -- posunuti sloky doprava
-\setlength{\versenumwidth}{0pt}
+\setlength{\versenumwidth}{0.5cm}
 
 % -- mezera mezi refrenem a slokou
 \versesep=17pt plus 14pt minus -14pt
