--- a/songs/1970.tex
+++ b/songs/1970.tex
@@ -8,7 +8,7 @@
 \[C]Nechci tu hloupe vzpom\[Dm]inat, koho taky dneska\brk
 \[C/E]zajima silnej rocnik sedmd\[F]esat, tak zacni pocitat.\brk
 \[C]Tenkrat tu bejval jinej st\[Dm]at a ja byl blbej na kvadr\[C/E]at,\brk
-jsem silnej rocnik sed\[F]mdesat,treba napriklad...\brk
+jsem silnej rocnik sed\[F]mdesat,treba napriklad...\[G]\brk
 \endverse
 \beginchorus
 \[G]Nasi mi vzdycky rika\[Am] li, jen nehas co te nepa\[F] li, jakej pan takovej kra\[C]m.\brk
@@ -19,7 +19,7 @@ jsem silnej rocnik sed\[F]mdesat,treba napriklad...\brk
 \[C]Nevim jestli je to\[Dm] znat, mozna by bylo lepsi\brk
 \[C/E]lhat, jsem silnej rocnik sedmde\[F]sat, nemoh' jsem si vybirat.\brk
 \[C]Tak mi to prestan vyci\[Dm]tat, narikat co jsem za pripad,\brk
-\[C/E]jsem silnej rocnik sedmdes\[F]at a mozna, ze jsem rad.\brk
+\[C/E]jsem silnej rocnik sedmdes\[F]at a mozna, ze jsem rad.\[G]\brk
 \endverse
 \beginchorus
 \[G]Nasi mi vzdycky rika\[Am] li, jen nehas co te nepa li\[F], jakej pan takovej k\[C]ram.\brk
@@ -35,4 +35,6 @@ dospely \[Am]do Kristovych let.\brk
 Cas pa\[F]di, cas leti a j\[G]e to zvlastni svet a tak i \[C]Husakovy deti dospely\brk
 d\[D]o Kristovych let.\brk
 Cas\[F] padi, cas letí.
-}\endverse\endsong
+
+}
+\endverse\endsong
