--- a/songs/Kupte_Si_Hřebeny.tex
+++ b/songs/Kupte_Si_Hřebeny.tex
@@ -33,5 +33,5 @@
 \[Am]Videl jsem podel cest \[F]aleje plne hesel    \brk
 \[C]vztycnenou k nebi pest \[E]a muze ktery nese        \brk
 \[Am]vlajku a na ni krev \[F]lidi jez pod ni staly \brk
-\[C]a z dalky hucel zpev \[E]internacionaly   Se   Po Mně   a text - Chords and  Noci Déšť   noci dest neprisel:  Ze    Štěstí A Mládenec   Nohavica - Kupte Si Hřebeny  Nohavica - Kupte Si Hřebeny  Nohavica - Kupte Si Hřebeny\brk
+\[C]a z dalky hucel zpev \[E]internacionaly.
 \endchorus\endsong
