--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Tue Jan 17 21:59:04 CST 2023 by link-doc
+% Automatically generated at Wed Jan 18 10:04:19 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -74,8 +74,6 @@
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
-\input{songs/Take_It_Easy}
-\input{songs/The_Weight}
 \input{songs/Thinking_Out_Loud}
 \input{songs/This_Is_The_Life}
 \input{songs/Touha}
@@ -108,6 +106,8 @@
 \input{songs/ŽŽ_DomcaSongs/Mandy}
 \input{songs/ŽŽ_DomcaSongs/Mmm_Mmm_Mmm_Mmm}
 \input{songs/ŽŽ_DomcaSongs/Sweet_Child_O_Mine}
+\input{songs/ŽŽ_DomcaSongs/Take_It_Easy}
+\input{songs/ŽŽ_DomcaSongs/The_Weight}
 \input{songs/ŽŽ_DomcaSongs/Waiting_On_The_World_To_Change}
 \input{songs/ŽŽ_HonzikSongs/AA_intro}
 \input{songs/ŽŽ_HonzikSongs/House_Of_Memories}
