--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,24 +1,34 @@
 % Index file for Songbook.pdf
-% Automatically generated at Wed Jan 18 10:04:19 CST 2023 by link-doc
+% Automatically generated at Fri Feb  3 22:04:57 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
 \input{songs/1_Signální}
 \input{songs/Accidentally_In_Love}
 \input{songs/Africa}
+\input{songs/Ani_K_Stáru}
 \input{songs/Až_Mi_Bude_Pětašedesát}
 \input{songs/Bad_Bad_Leroy_Brown}
 \input{songs/Baroko}
+\input{songs/Batalion}
+\input{songs/Behind_Blue_Eyes}
+\input{songs/Bláznova_Ukolébavka}
 \input{songs/Blíženci}
 \input{songs/Boulevard_Of_Broken_Dreams}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
+\input{songs/Cesta}
 \input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmodej}
 \input{songs/Dej_Mi_Víc_Své_Lásky}
 \input{songs/Demons}
+\input{songs/Dlouhej_Kouř}
+\input{songs/Do_Nebe}
+\input{songs/Dobrák_Od_Kosti}
 \input{songs/Dont_Look_Back_In_Anger}
 \input{songs/Drobná_Paralela}
+\input{songs/Duše_Z_Gumy}
+\input{songs/Fair_Play}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
 \input{songs/Grónská_písnička}
@@ -30,17 +40,24 @@
 \input{songs/Hollywood_Hills}
 \input{songs/Honey_Honey}
 \input{songs/Hotel_California}
+\input{songs/Hrobar}
+\input{songs/Hruška}
 \input{songs/Im_A_Believer}
 \input{songs/Jarní_Tání}
 \input{songs/Jasná_Zpráva}
+\input{songs/Jdou_Po_Mně_Jdou}
+\input{songs/Jožin_Z_Bažin}
 \input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Kupte_Si_Hřebeny}
 \input{songs/Kutil}
+\input{songs/Křídla_Z_Mýdla}
 \input{songs/Lachtani}
 \input{songs/Leaving_On_A_Jet_Plane}
 \input{songs/Let_Her_Go}
 \input{songs/Let_It_Be}
+\input{songs/Let_It_Go}
+\input{songs/Living_Next_Door_To_Alice}
 \input{songs/Láska_Na_Vsi}
 \input{songs/Malování}
 \input{songs/Malá_Dáma}
@@ -48,6 +65,7 @@
 \input{songs/Marie}
 \input{songs/Matfyzák_Na_Discu}
 \input{songs/Mikymauz}
+\input{songs/Milenci_V_Texaskách}
 \input{songs/Million_Reasons}
 \input{songs/Mimorealita}
 \input{songs/Minulost}
@@ -67,9 +85,12 @@
 \input{songs/Pocity}
 \input{songs/Pohoda}
 \input{songs/Pompeii}
+\input{songs/Proklínám}
+\input{songs/Proměny}
 \input{songs/Riptide}
 \input{songs/Runaway_Train}
 \input{songs/Ráda_Se_Miluje}
+\input{songs/Sbohem_Galánečko}
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Svaz_Českých_Bohémů}
@@ -96,6 +117,7 @@
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zombie}
+\input{songs/Čarodějnice_Z_Amesbury}
 \input{songs/Černí_andělé}
 \input{songs/Šaman}
 \input{songs/Šrouby_A_Matice}
