--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Feb  3 22:04:57 CST 2023 by link-doc
+% Automatically generated at Sat Feb  4 17:43:53 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -34,6 +34,7 @@
 \input{songs/Grónská_písnička}
 \input{songs/Hallelujah}
 \input{songs/Hero}
+\input{songs/Hey_Soul_Sister}
 \input{songs/Hey_There_Delilah}
 \input{songs/Hlupák_Váhá}
 \input{songs/Holky_To_Objektivně_Lehčí_Maj}
@@ -43,6 +44,7 @@
 \input{songs/Hrobar}
 \input{songs/Hruška}
 \input{songs/Im_A_Believer}
+\input{songs/Im_Yours}
 \input{songs/Jarní_Tání}
 \input{songs/Jasná_Zpráva}
 \input{songs/Jdou_Po_Mně_Jdou}
@@ -93,6 +95,7 @@
 \input{songs/Sbohem_Galánečko}
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
+\input{songs/Stitches}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
 \input{songs/Thinking_Out_Loud}
