--- a/songs/Wonderwall.tex
+++ b/songs/Wonderwall.tex
@@ -1,62 +1,59 @@
 \sclearpage\beginsong{Wonderwall}[by={Oasis}]
 \capo{2}
-\beginverse*{\nolyrics Intro: \[Em]    \[G]   \[D]   \[A7sus4]\brk
+\beginverse*{\nolyrics Intro:    \[Em]  \[G]   \[Dsus4]     \[A7sus4]        \[Em]  \[G]   \[Dsus4]       \[A7sus4]         \brk
 }\endverse
 \beginverse
 \[Em]Today is \[G]gonna be the day\brk
-That they're g\[D]onna throw it back \[A7sus4]to you\brk
-\[Em]By now you s\[G]hould've somehow\brk
-Real\[D]ised what you got\[A7sus4]ta do\brk
-\[Em]I don't believe that \[G]anybody\brk
-F\[D]eels the way\[A7sus4] I do about you now \[C] \[D]  \[A7sus4]       \[A7sus4]\brk
+That they're \[Dsus4]gonna throw it back to \[A7sus4]you,\brk
+\[Em]By now you \[G]should have somehow\brk
+Rea\[Dsus4]lized what you gotta \[A7sus4]do.\brk
+\[Em]I don't believe that \[G]anybody \[Dsus4]feels the way I \[A7sus4]do\brk
+About you \[C]no\[Dsus2]w.      \[A]         \brk
 \endverse
 \beginverse
-\[Em]Backbeat the \[G]word is on the street\brk
-That the f\[D]ire in your heart \[A7sus4]is out\brk
-\[Em]I'm sure you've \[G]heard it all before\brk
-But you ne\[D]ver really had\[A7sus4] a doubt\brk
-\[Em]I don't believe that \[G]anybody \[D]feels\brk
-The way I d\[A7sus4]o about you now   \[Em]   \[G]  \[D]  \[A7sus4]\brk
+\[Em]Back beat, the \[G]word is on the street\brk
+That the \[Dsus4]fire in your heart is \[A7sus4]out.\brk
+\[Em]I'm sure you've \[G]heard it all before,\brk
+But you \[Dsus4]never really had a \[A7sus4]doubt.\brk
+\[Em]I don't believe that \[G]anybody \[Dsus4]feels the way I \[A7sus4]do\brk
+About you \[Em]now\[G].   \[Dsus2]     \[A]         \brk
 \endverse
+\beginverse*{\nolyrics [Bridge]: 
+And \[C]all the roads we \[D]have to walk are \[Em]winding,\brk
+And \[C]all the lights that \[D]lead us there are \[Em]blinding.\brk
+\[C]There are many \[D]things that I would \[G]like to say to you,\brk
+\[G]But I don't know \[A7sus4]how.    \[A7]         \brk
+}\endverse
 \beginchorus
-And a\[C]ll the roads we h\[D]ave to walk a\[Em]re winding\brk
-And a\[C]ll the lights tha\[D]t lead us there a\[Em]re blinding\brk
-T\[C]here are many t\[D]hings that I would\brk
-\[G]Like to \[D]say to \[Em]you\brk
-But I d\[D]on't kn\[A7sus4]ow how\brk
-\endchorus
-\beginchorus
-Because m\[C]aybe \[Em]   \[G]\brk
-You're g\[Em]onna be the one that \[C]saves me?\[Em]   \[G]\brk
-And a\[Em]fter \[C]all\[Em]   \[G]\brk
-You're my wonder\[Em]wall\[C]  \[Em]   \[G]   \[Em]\brk
+Because \[C]may\[Em7]be,   \[G]         \brk
+You're \[G]gonna be the one that \[C]saves me,\[Em7]   \[G]         \brk
+And \[Em7]after \[C]all\[Em7],     \[G]         \brk
+You're my \[G]wonder\[C]wal\[Em7]l.    \[G]         \brk
 \endchorus
 \beginverse
-\[Em]Today was \[G]gonna be the day\brk
-But they'll n\[D]ever throw it back \[A7sus4]to you\brk
-\[Em]By now you \[G]should've somehow\brk
-Real\[D]ised what you're not \[A7sus4]to do\brk
-\[Em]I don't believe that \[G]anybody\brk
-\[D]Feels the way\[A7sus4] I do\brk
-About you n\[Em]ow  \[G]  \[D]  \[A7sus4]\brk
+\[Em]Today was \[G]gonna be the day,\brk
+But they'll \[Dsus4]never throw it back to \[A7sus4]you.\brk
+\[Em]By now you \[G]should have somehow\brk
+Real\[Dsus4]ized what you're not to \[A7sus4]do.\brk
+\[Em]I don't believe that \[G]anybody \[Dsus4]feels the way I \[A7sus4]do,\brk
+About you \[Em]now.\[G]   \[Dsus2]     \[A]         \brk
 \endverse
+\beginverse*{\nolyrics [Bridge]: 
+And \[C]all the roads that \[D]lead you there were \[Em]winding,\brk
+And \[C]all the lights that \[D]light the way are \[Em]blinding.\brk
+\[C]There are many \[D]things that I would \[G]like to say to you,\brk
+\[G]But I don't know \[A7sus4]how.    \[A7]         \brk
+}\endverse
 \beginchorus
-And a\[C]ll the roads that l\[D]ead you there a\[Em]re winding\brk
-And a\[C]ll the lights that l\[D]ight the way a\[Em]re blinding\brk
-T\[C]here are many t\[D]hings that I would \[G]like to \[D]say to \[Em]you\brk
-But I d\[D]on't kn\[A7sus4]ow how\brk
+Because \[C]may\[Em7]be,   \[G]         \brk
+You're \[G]gonna be the one that \[C]saves me,\[Em7]   \[G]         \brk
+And \[G]after \[C]all\[Em7],     \[G]         \brk
+You're my \[G]wonder\[C]wal\[Em7]l.    \[G] \[Em]         \brk
 \endchorus
-\beginchorus
-I said m\[C]aybe \[Em]   \[G]\brk
-You're g\[Em]onna be the one that \[C]saves me?\[Em]   \[G]\brk
-And a\[Em]fter \[C]all\[Em]   \[G]\brk
-You're my w\[Em]onder\[C]wall\[Em]   \[G]  \[Em]\brk
-I said m\[C]aybe (I said m\[Em]aybe)\brk
-You're g\[Em]onna be the one that \[C]saves me?\[Em]   \[G]\brk
-And a\[Em]fter \[C]all\[Em]   \[G]\brk
-You're my w\[Em]onder\[C]wall\[Em]   \[G]  \[Em]\brk
-I said m\[C]aybe (I said m\[Em]aybe)\brk
-You're g\[Em]onna be the one that \[C]saves me? (that \[Em]saves me\[G])\brk
-You're g\[Em]onna be the one that \[C]saves me? (that \[Em]saves me\[G])\brk
-You're g\[Em]onna be the one that \[C]saves me? (that \[Em]saves me\[G])  \[Em]\brk
-\endchorus\endsong
+\beginverse*{\nolyrics [Outro]: 
+I said m\[C]aybe,  \[Em7]     \[G]         \brk
+You're \[Em7]gonna be the one that \[C]saves me, \[Em7]     \[G]         \brk
+You're \[Em7]gonna be the one that \[C]saves me, \[Em7]     \[G]         \brk
+You're \[Em7]gonna be the one that \[C]saves me  \[Em7]     \[G] \[Em7]         \brk
+   \[C] \[Em]    \[G] \[Em]    \[C] \[Em]    \[G] \[Em7]         \brk
+}\endverse\endsong
