--- a/songs/Batalion.tex
+++ b/songs/Batalion.tex
@@ -1,35 +1,33 @@
 \sclearpage\beginsong{Batalion}[by={Spirituál kvintet}]
-\beginverse*{\nolyrics Intro: \[Am]Víno \[C]máš a \[G]marky\[Am]tánku,\[C]dlouhá noc \[G]se \[Am]pro-\[Em]hý-\[Am]ří.Víno \[C]máš a \[G]chvilku \[Am]spánku,\[C]díky, dí\[G]ky \[Am]ver-\[Em]bí-\[Am]ři.
+\beginverse*{\nolyrics Intro: \[Am]Víno \[C]máš a \[G]marky\[Am]tánku,\brk\[C]dlouhá noc \[G]se \[Am]pro-\[Em]hý-\[Am]ří.\brk\[Am]Víno \[C]máš a \[G]chvilku \[Am]spánku,\brk\[C]díky, dí\[G]ky \[Am]ver-\[Em]bí-\[Am]ři.\brk
 }\endverse
 \beginverse
-\[Am]Dříve než se rozední,
-kapitán \[C]k osedlání \[G]rozkaz \[Am]dá - \[G/D]vá,
-\[Am]ostruhami do slabin ko\[G]ně \[Am]po-\[Em]há-\[Am]ní.
-čekají \[C]ženy, zlaťá\[G]ky a \[Am]slá-\[G/D]-va,
-\[Am]do výstřelů z karabin zvon \[G]už \[Am]vyz-\[Em]vá-\[Am]ní..
+\[Am]Dříve než se rozední, kapitán \[C]k osedlání \[G]rozkaz \[Am]dá--\[Em]vá,\brk
+\[Am]ostruhami do slabin \[C]ko\[G]ně \[Am]po-\[Em]há--\[Am]ní.\brk
+\[Am]Tam na straně polední, čekají \[C]ženy, zlaťá\[G]ky a \[Am]slá--\[Em]va,\brk
+\[Am]do výstřelů z karabin \[C]zvon \[G]už \[Am]vyz-\[Em]vá--\[Am]ní.\brk
 \endverse
 \beginchorus
-\[Am]Víno na kur\[C]áž a \[G]pomilovat marky\[Am]tánku,
-\[C]zítra do Burgund Batal\[G]ion \[Am]za-\[Em]mí-\[Am]ří.
-Víno na ku\[C]ráž a k \[G]ránu dvě hodinky \[Am]spánku,
-\[C]díky, díky Vám králov\[G]ští \[Am]ver-\[Em]bí-\[Am]ři.
+\[Am]Víno na ku\[C]ráž a \[G]pomilovat marky\[Am]tánku,\brk
+\[Am]zítra do Bur\[C]gund Bata\[G]lion \[Am]za-\[Em]mí--\[Am]ří.\brk
+\[Am]Víno na ku\[C]ráž a \[G]k ránu dvě hodinky \[Am]spánku,\brk
+\[Am]díky, díky \[C]Vám králov\[G]ští \[Am]ver-\[Em]bí--\[Am]ři.\brk
 \endchorus
 \beginverse
-\[Am]Rozprášen je Batalion,
-poslední \[C]vojáci se k \[G]zemi \[Am]hrou-\[G/D]tí,
-\[Am]na polštáři z kopretin budou\[G] vě\[Am]čně \[Em]spá\[Am]t.
-verbíři \[C]nové chlapce \[G]přive\[Am]dou \[G/D] ti,
-\[Am]za královský hermelín pad\[G]ne \[Am]kaž-\[Em]dý \[Am]rád.
+\[Am]Rozprášen je Batalion, poslední \[C]vojáci se \[G]k zemi \[Am]hrou--\[Em]tí,\brk
+\[Am]na polštáři z kopretin \[C]bu\[G]dou \[Am]věč\[Em]ně  \[Am]spát.\brk
+\[Am]Neplač sladká Marion, verbíři \[C]nové chlapce \[G]přive\[Am]dou  \[Em]ti,\brk
+\[Am]za královský hermelín \[C]pad\[G]ne \[Am]kaž-\[Em]dý  \[Am]rád.\brk
 \endverse
 \beginchorus
-\[Am]Víno na kur\[C]áž a \[G]pomilovat marky\[Am]tánku,
-\[C]zítra do Burgund Batal\[G]ion \[Am]za-\[Em]mí-\[Am]ří.
-Víno na ku\[C]ráž a k \[G]ránu dvě hodinky \[Am]spánku,
-\[C]díky, díky Vám králov\[G]ští \[Am]ver-\[Em]bí-\[Am]ři.
+\[Am]Víno na ku\[C]ráž a \[G]pomilovat marky\[Am]tánku,\brk
+\[Am]zítra do Bur\[C]gund Bata\[G]lion \[Am]za-\[Em]mí--\[Am]ří.\brk
+\[Am]Víno na ku\[C]ráž a \[G]k ránu dvě hodinky \[Am]spánku,\brk
+\[Am]díky, díky \[C]Vám králov\[G]ští \[Am]ver-\[Em]bí--\[Am]ři.\brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
-\[Am]Víno \[C]máš a \[G]marky\[Am]tánku,
-\[C]dlouhá noc \[G]se \[Am]pro-\[Em]hý-\[Am]ří.
-Víno \[C]máš a \[G]chvilku \[Am]spánku,
-\[C]díky, dí\[G]ky \[Am]ver-\[Em]bí-\[Am]ři.
+\[Am]Víno \[C]máš a \[G]marky\[Am]tánku,\brk
+\[C]dlouhá noc \[G]se \[Am]pro-\[Em]hý-\[Am]ří.\brk
+\[Am]Víno \[C]máš a \[G]chvilku \[Am]spánku,\brk
+\[C]díky, dí\[G]ky \[Am]ver-\[Em]bí-\[Am]ři.\brk
 }\endverse\endsong
