--- a/songs/Demons.tex
+++ b/songs/Demons.tex
@@ -1,79 +1,78 @@
 \sclearpage\beginsong{Demons}[by={Imagine Dragons}]
-\capo{1}
+\capo{3}
 \beginverse
-When the d\[D]ays are cold\brk
-And the c\[A]ards all fold\brk
-And the s\[Bm]aints we see\brk
-Are all m\[G]ade of gold\brk
-When your dr\[D]eams all fail\brk
-And the o\[A]nes we hail\brk
-Are the w\[Bm]orst of all\brk
-And the bl\[G]oodrss run stale\brk
+When the da\[C]ys are cold\brk
+And the car\[G]ds all fold\brk
+And the sai\[Am]nts we see\brk
+Are all ma\[F]de of gold\brk
+When your d\[C]reams all fail\brk
+And the one\[G]s we hail\brk
+Are the wor\[Am]st of all\brk
+And the bl\[F]ood's run stale\brk
+\[C]I wanna hide the tr\[G]uth\brk
+I wanna shelter \[Am]you\brk
+But with the beast \[F]inside\brk
+There's nowhere we can \[C]hide\brk
+No matter what we \[G]breed\brk
+We still are made of \[Am]greed\brk
+This is my kingdom \[F]come\brk
+This is my kingdom \[C]come\brk
 \endverse
 \beginchorus
-\[D]I wanna hide the trut\[A]h\brk
-I wanna shelter y\[Bm]ou\brk
-But with the beast ins\[G]ide\brk
-Thererss nowhere we \[D]can hide\brk
-No matter what we br\[A]eed\brk
-We still are made of gr\[Bm]eed\brk
-This is my kingdom c\[G]ome\brk
-\endchorus
-\beginchorus
-\[D]When you feel my hea\[A]t\brk
-Look into my e\[Bm]yes\brk
-Itrss where my dem\[G]ons hide\brk
-Itrss where my dem\[D]ons hide\brk
-Donrst get t\[A]oo close\brk
-Itrss dar\[Bm]k inside\brk
-Itrss where my dem\[G]ons hide\brk
-Itrss where my dem\[D]ons hide\brk
+\[C]When you feel my he\[G]at\brk
+Look into my \[Am]eyes\brk
+It's where my demons \[F]hide\brk
+It's where my demons \[C]hide\brk
+Don't get too \[G]close\brk
+It's dark in\[Am]side\brk
+It's where my demons \[F]hide\brk
+It's where my demons \[C]hide\brk
 \endchorus
 \beginverse
-At the c\[D]urtainrss call\brk
-It's the l\[A]ast of all\brk
-When the l\[Bm]ights fade out\brk
-All the s\[G]inners crawl\brk
-So they d\[D]ug your grave\brk
-And the m\[A]asquerade\brk
-Will come c\[Bm]alling out\brk
-At the m\[G]ess you made\brk
+When the cu\[C]rtain's call\brk
+Is the last\[G] of all\brk
+When the li\[Am]ghts fade out\brk
+All the si\[F]nners crawl\brk
+So they du\[C]g your grave\brk
+And the mas\[G]querade\brk
+Will come c\[Am]alling out\brk
+At the mes\[F]s you made\brk
+\[C]Don't wanna let you do\[G]wn\brk
+But I am hell \[Am]bound\brk
+Though this is all for \[F]you\brk
+Don't wanna hide the \[C]truth\brk
+No matter what we \[G]breed\brk
+We still are made of \[Am]greed\brk
+This is my kingdom \[F]come\brk
+This is my kingdom \[C]come\brk
 \endverse
 \beginchorus
-\[D]Donrst wanna let yo\[A]u down\brk
-But I am hellb\[Bm]ound\brk
-Though this is all for y\[G]ou\brk
-Donrst wanna hide t\[D]he truth\brk
-No matter what we br\[A]eed\brk
-We still are made of gr\[Bm]eed\brk
-This is my kingdom c\[G]ome\brk
-\endchorus
-\beginchorus
-\[D]When you feel my hea\[A]t\brk
-Look into my e\[Bm]yes\brk
-Itrss where my dem\[G]ons hide\brk
-Itrss where my dem\[D]ons hide\brk
-Donrst get t\[A]oo close\brk
-Itrss dar\[Bm]k inside\brk
-Itrss where my dem\[G]ons hide\brk
-Itrss where my dem\[D]ons hide\brk
+\[C]When you feel my he\[G]at\brk
+Look into my \[Am]eyes\brk
+It's where my demons \[F]hide\brk
+It's where my demons \[C]hide\brk
+Don't get too \[G]close\brk
+It's dark in\[Am]side\brk
+It's where my demons \[F]hide\brk
+It's where my demons \[C]hide\brk
 \endchorus
 \beginverse*{\nolyrics [Bridge]: 
-T\[D]hey say itrss what \[A]you make\brk
-I say itrss up\[Bm] to fate\brk
-Itrss woven in\[G] my soul\brk
-I need to let you g\[D]o\brk
-Your eyes, they shine so br\[A]ight\brk
-I wanna save that l\[Bm]ight\brk
-Unless you show me h\[D]ow\brk
+\[C]They say it's what you ma\[G]ke\brk
+I say it's up to \[Am]fate\brk
+It's woven in my \[F]soul\brk
+I need to let you \[C]go\brk
+Your eyes they shine so \[G]bright\brk
+I want to save that \[Am]light\brk
+I can't escape this \[F]now\brk
+Unless you show me \[C]how\brk
 }\endverse
 \beginchorus
-W\[D]hen you feel my h\[A]eat\brk
-Look into my e\[Bm]yes\brk
-Itrss where my dem\[G]ons hide\brk
-Itrss where my dem\[D]ons hide\brk
-Donrst get t\[A]oo close\brk
-Itrss dar\[Bm]k inside\brk
-Itrss where my dem\[G]ons hide\brk
-Itrss where my dem\[D]ons  \brk
+\[C]When you feel my he\[G]at\brk
+Look into my \[Am]eyes\brk
+It's where my demons \[F]hide\brk
+It's where my demons \[C]hide\brk
+Don't get too \[G]close\brk
+It's dark in\[Am]side\brk
+It's where my demons \[F]hide\brk
+It's where my demons \[C] A D G B        whats the strumming  use D D DU UD  IS AMAZING     Me  Her    Her          Of   Me   Dragons - Demons  Dragons - Demons  Dragons - Demons   \brk
 \endchorus\endsong
