--- a/songs/Cesta.tex
+++ b/songs/Cesta.tex
@@ -1,20 +1,53 @@
-\sclearpage\beginsong{Cesta}[by={Kryštof}]
-\beginverse*{\nolyrics Intro: \[C] \[G] \[Am]  \[F] \[G]}
-\endverse
+\sclearpage\beginsong{Cesta}[by={Tomáš Klus}]
+\beginverse*{\nolyrics Intro: \[C]  \[G]  \[A]  \[F]  \[G]         \brk
+}\endverse
 \beginverse
-Tou \[C]cestou Tím směrem prý bych \[G]se dávno měl dát Kdyz \[Dm]sněží, jde to stěží, ale sněhy pak tají Kus \[F]něhy ti za nehty \[G]slíbí a dají Víc \[C]síly Na dně víc\[G] dávat A i \[Dm]když se vleče a je schůdná jen v kleče Donutí \[F]přestat se zbytečně \[G]ptát 
+Tou \[C] cestou, tím směrem\brk
+Prý bych se \[G] dávno měl dát\brk
+Když \[Am] sněží, jde to stěží, ale sněhy pak tají\brk
+Kus \[F] něhy ti za nehty \[G] slíbí a dají\brk
+Víc \[C] síly, se prát\brk
+Na dně víc \[G] dávat, než brát.\brk
+A \[Am] i když se vleče a je schůdná jen v kleče\brk
+Donutí \[F] přestat se zbytečně \[G] ptát\brk
 \endverse
 \beginchorus
-Jestli se \[C]blížím k cíli Kolik \[G]zbývá víry Kam \[Am]zvou Svodidla, co po tmě mi \[F]lžou?      \[G]         Zda \[C]couvám zpátky A \[G]plýtvám řádky Co \[Am]řvou Že už mi doma neote\[F]vřou   \[G]         
+Jestli se \[C] blížím k cíli\brk
+Kolik \[G] zbývá víry\brk
+Kam \[Am] zvou\brk
+Svodidla, co po tmě mi \[F] lžou?  \[G]         \brk
+Snad \[C] couvám zpátky\brk
+A \[G] plýtvám řádky\brk
+Co \[Am] řvou\brk
+Že už mi doma neotev\[F]řou  \[G]         \brk
 \endchorus
 \beginverse
-Nebo jít \[C]s proudem Na lusknutí prstů \[G]se začít hned smát, Mít \[Dm]svuj chodník slávy a před sebou davy A přes \[F]zkroucená záda být \[G]součástí stáda Ale \[C]zpívat Kotníky \[G]líbat Na \[Dm]křídlech vsech slavíku \[F]Přestat se zbytečně \[G]ptát 
+Nebo jít s \[C] proudem\brk
+Na lusknutí prstů se \[G] začít hned smát,\brk
+Mít \[Am] svůj chodník slávy a před sebou davy\brk
+A přes \[F] zkroucená záda být \[G] součástí stáda\brk
+Ale \[C] zpívat, a hrát\brk
+Kotníky \[G] líbat, a stát\brk
+Na \[Am] křídlech všech slavíků, a vlastně už ze zvyku\brk
+\[F]Přestat se zbytečně   \[G]ptát\brk
 \endverse
 \beginchorus
-Jestli se \[C]blížím k cíli Kolik \[G]zbývá víry Kam \[Am]zvou Svodidla, co po tmě mi \[F]lžou?   \[G]         Zda \[C]couvám zpátky A \[G]plýtvám řádky Co \[Am]řvou Že uz mi doma neotev\[F]řou   \[G]         
+Jestli se \[C] blížím k cíli\brk
+Kolik \[G] zbývá víry\brk
+Kam \[Am] zvou\brk
+Svodidla, co po tmě mi \[F] lžou?  \[G]         \brk
+Snad \[C] couvám zpátky\brk
+A \[G] plýtvám řádky\brk
+Co \[Am] řvou\brk
+Že už mi doma neotev\[F]řou  \[G]         \brk
 \endchorus
 \beginchorus
-Jestli se \[C]blížím k cíli Kolik \[G]zbývá víry Kam \[Am]zvou Svodidla, co po tmě mi \[F]lžou?   \[G]         Zda \[C]couvám zpátky A \[G]plýtvám řádky Co \[Am]řvou 
-Že uz mi doma  neotevřou.
-\endchorus
-\endsong
+Jestli s\[C]e  blížím k cíli\brk
+Kolik \[G] zbývá víry\brk
+Kam \[Am] zvou\brk
+Svodidla, co po tmě mi \[F] lžou?  \[G]         \brk
+Snad \[C] couvám zpátky\brk
+A \[G] plýtvám řádky\brk
+Co \[Am] řvou\brk
+Že už mi doma neotev\[F]řou[/\[G]tab]\brk
+\endchorus\endsong
