--- a/songs/Touha.tex
+++ b/songs/Touha.tex
@@ -1,35 +1,57 @@
 \sclearpage\beginsong{Touha}[by={Daniel Landa}]
 \beginverse\[F]Je to jak nic,\brk
+to totiž neváží víc
 je to ne\[C]co jak dech,\brk
+jak přání na křídlech
 je to \[Dm]nemožnej cíl\brk
 kterej si \[A]vymyslil\brk
 \[F]je to jak sen ,co ráno rozpustil den\brk
 nic neni \[C]dost velkej cíl\brk
+aby ses nepokusil
 \[Dm]volej k nebi přání\brk
 a \[A]všechno bude k mání\brk
+\endverse
+\beginchorus
 touha je \[F]zázrak, kámo zázrak   (\[C]piskani)\brk
 touha je zá\[Dm]zrak, kámo zázrak   (\[A]piskani)\brk
+\endchorus
+\beginverse
 \[F]je to jak žár, pořádně velikej dar\brk
 je to jak le\[C]tící drak\brk
+naprosto přesnej prak
 \[Dm]je to hukot moře\brk
 \[A]je to pramen v hoře\brk
 \[F]touha je žít\brk
+zůstat a neodejít
 touha je pad\[C]nout a vstát a rány nevnímat\brk
 je to tluk\[Dm]ot srdce,\brk
 je to poklad v ru\[A]ce\brk
+\endverse
+\beginverse
 \[F]je to jak třpit\brk
-úžasn měs\[C]íční žár\brk
+jako sluneční svit
+úžasná měs\[C]íční zář\brk
+je to jak boží tvář
 je to skr\[Dm]ytá síla\brk
 je to zlatá ží\[A]la\brk
+\endverse
+\beginverse
 touha je záz\[F]rak\brk
+takze přej si co chces
 probouzej sí\[C]lu\brk
+s ní už neklopýtneš
 touha jsou čá\[Dm]ry\brk
+v hlouby duše je maš
 touha je zázr\[A]ak, kámo zázrak\brk
+vzdyt uz to znáš
+\endverse
+\beginchorus
 touha je kr\[F]ám\brk
+kde mají všechno a hned
 hladina pá\[C]lí i ten pitomej svět\brk
 touha je br\[Dm]ána ke všemu o čem si snil\brk
 touha je ces\[A]ta i cíl\brk
 touha je zá\[F]zrak, kámo zázrak  (\[C]piskani)\brk
 touha je zá\[Dm]zrak, kámo zázrak  (\[A]piskani)\brk
 touha je zá\[F]zrak, kámo zázrak   \[C]         \brk
-\endverse\endsong
+\endchorus\endsong
