--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,11 +1,12 @@
 % Index file for Songbook.pdf
-% Automatically generated at Thu Feb  9 17:29:49 CST 2023 by link-doc
+% Automatically generated at Thu Feb  9 19:19:39 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
 \input{songs/1_Signální}
 \input{songs/Accidentally_In_Love}
 \input{songs/Africa}
+\input{songs/Anděl}
 \input{songs/Ani_K_Stáru}
 \input{songs/Až_Mi_Bude_Pětašedesát}
 \input{songs/Bad_Bad_Leroy_Brown}
@@ -14,10 +15,12 @@
 \input{songs/Behind_Blue_Eyes}
 \input{songs/Bláznova_Ukolébavka}
 \input{songs/Blíženci}
+\input{songs/Boli_Sme_Raz_Milovaní}
 \input{songs/Boulevard_Of_Broken_Dreams}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
 \input{songs/Cesta}
+\input{songs/Cesta_Z_Města}
 \input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmodej}
 \input{songs/Dej_Mi_Víc_Své_Lásky}
@@ -26,6 +29,7 @@
 \input{songs/Do_Nebe}
 \input{songs/Dobrák_Od_Kosti}
 \input{songs/Dont_Look_Back_In_Anger}
+\input{songs/Drive_By}
 \input{songs/Drobná_Paralela}
 \input{songs/Duše_Z_Gumy}
 \input{songs/Fair_Play}
@@ -37,6 +41,7 @@
 \input{songs/Hey_Soul_Sister}
 \input{songs/Hey_There_Delilah}
 \input{songs/Hlupák_Váhá}
+\input{songs/Hlídač_Krav}
 \input{songs/Holky_To_Objektivně_Lehčí_Maj}
 \input{songs/Hollywood_Hills}
 \input{songs/Honey_Honey}
@@ -51,6 +56,8 @@
 \input{songs/Jožin_Z_Bažin}
 \input{songs/Každý_Ráno}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
+\input{songs/Když_Nemůžeš_Tak_Přidej}
+\input{songs/Krátke_Lásky}
 \input{songs/Kupte_Si_Hřebeny}
 \input{songs/Kutil}
 \input{songs/Křídla_Z_Mýdla}
@@ -76,6 +83,7 @@
 \input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Můj_Svět}
 \input{songs/Nagasaki_Hirošima}
+\input{songs/Nechte_Zvony_Znít}
 \input{songs/Netušim}
 \input{songs/Okno_Mé_Lásky}
 \input{songs/On_Top_Of_The_World}
@@ -89,12 +97,14 @@
 \input{songs/Pompeii}
 \input{songs/Proklínám}
 \input{songs/Proměny}
+\input{songs/Ring-O-Ding}
 \input{songs/Riptide}
 \input{songs/Runaway_Train}
 \input{songs/Ráda_Se_Miluje}
 \input{songs/Sbohem_Galánečko}
 \input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
+\input{songs/Starý_Muž}
 \input{songs/Stitches}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sáro}
