--- a/Songbook.tex
+++ b/Songbook.tex
@@ -102,7 +102,7 @@
 % \sepindexesfalse
 
 %% Author, songbook title, year, etc.
-\title{\textbf{\Huge All you need is quitar \dots \quad\quad\quad\quad \\[1cm] \quad\quad\quad \dots and few chords}}
+\title{\textbf{\Huge All you need is guitar \dots \quad\quad\quad\quad \\[1cm] \quad\quad\quad \dots and few chords}}
 \author{\Large Tomíkův zpěvník}
 \date{\the\year}
 
