--- a/songs/Až_Mi_Bude_Pětašedesát.tex
+++ b/songs/Až_Mi_Bude_Pětašedesát.tex
@@ -1,13 +1,13 @@
 \sclearpage\beginsong{Až Mi Bude Pětašedesát}[by={Michal Horák}]
 \beginverse
-\[C]Budu pořád \[Caug]štramák jako d\[F]nes,\brk
+\[C]Budu pořád \[Caug]štramák jako d\[F]nes,\[Fm]\brk
 \[C]Co se v klidu \[Caug]do ix-eska \[F]vlez\[Fm],\brk
 A \[C]budu efko \[E/B]na kytaře \[F]pořád blbě \[D]hrát,\brk
 No a \[C/G]budu \[E/G#]pořád \[Am]nad vě\[C7/G]cí,\brk
 Až mi \[F]bude pěta\[F/G]šede\[C]sát?\brk
 \endverse
 \beginverse
-\[C]Budu trapný \[Caug]vtipy říkat \[F]dál,\brk
+\[C]Budu trapný \[Caug]vtipy říkat \[F]dál,\[Fm]\brk
 \[C]Aniž by se \[Caug]jim kdokoliv \[F]smál\[Fm],\brk
 A \[C]budu se jim \[E/B]dál jenom já \[F]smát, a jak \[D]rád,\brk
 No a \[C/G]budu \[E/G#]pořád \[Am]nad vě\[C7/G]cí,\brk
