--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Feb 10 20:26:22 CST 2023 by link-doc
+% Automatically generated at Fri Feb 10 21:34:42 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1970}
@@ -123,6 +123,7 @@
 \input{songs/Viva_La_Vida}
 \input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
+\input{songs/Včelín}
 \input{songs/Waterloo}
 \input{songs/When_All_Is_Said_And_Done}
 \input{songs/When_Youre_Gone}
@@ -154,5 +155,6 @@
 \input{songs/ŽŽ_Ybokem/Ayo_Technology}
 \input{songs/ŽŽ_Ybokem/Breakfast_At_Tiffanys}
 \input{songs/ŽŽ_Ybokem/Dont_Go_Breaking_My_Heart}
+\input{songs/ŽŽ_Ybokem/Jdevozem}
 \input{songs/ŽŽ_Ybokem/Not_Fair}
 \input{songs/ŽŽŽ-endsongs}
